<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015. Qiao
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Fx Explorer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="button_negative">Cancel</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_show_root">Show Root Dir</string>
    <string name="pref_title_show_hide">Show Hidden Files</string>
    <string name="pref_title_sort_type">Sort Type</string>
    <string name="action_compress">Compress</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_select_all">Select All</string>
    <string name="action_rename">Rename</string>
    <string name="action_detail">Detail</string>
    <string name="action_bookmark">Pin To Start</string>
    <string name="hint_new_name">new name</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_document">Document</string>
    <string name="menu_download">Download</string>
    <string name="menu_external_storage">External Storage</string>
    <string name="menu_help_feedback">Feedback</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_music">Music</string>
    <string name="menu_picture">Picture</string>
    <string name="menu_root_directory">Root Directory</string>
    <string name="menu_settings">Settings</string>
    <string name="description_item_count">%1$d items</string>
    <string name="dialog_msg_are_you_confirm_delete_them">are you confirm to delete them ?</string>
    <string name="dialog_title_compressing">compressing</string>
    <string name="dialog_title_tip">Prompt</string>
    <string name="hint_target_file_name">target file name</string>
    <string name="tip_compress_failed">compression failure</string>
    <string name="tip_compress_ok">compression success</string>
    <string name="tip_delete_ok">delete success</string>
    <string name="tip_file_already_exists">file already exists</string>
    <string name="tip_file_name_cannt_null">new file name can not be empty</string>
    <string name="tip_no_read_permission">no read permission</string>
    <string name="tip_part_of_delete_ok">failed to delete some files</string>
    <string name="tip_pin_start_ok">%1$s has been fixed to the desktop</string>
    <string name="tip_rename_failed">rename fails</string>
    <string name="tip_cannt_show_multi_detail">details of multiple files can not be displayed</string>
    <string name="pref_header_other">Other</string>
    <string name="apk_detail_installed">Installed (%1$s)</string>
    <string name="apk_detail_not_install">Not Installed</string>
    <string name="btn_install">INSTALL</string>
    <string name="contain">Contain:</string>
    <string name="dialog_msg_folder_detial">%1$d files  %2$d folders</string>
    <string name="install">Install:</string>
    <string name="last_modify_time">Last Modify Time:</string>
    <string name="package_name">Package Name:</string>
    <string name="show_hash_code">Show Hash Code</string>
    <string name="size">Size:</string>
    <string name="tip_click_copy_hash_code">Click Hash Code To Copy</string>
    <string name="tip_hash_copied">%1$s copied</string>
    <string name="tip_unknown_hash_method">Not Supported Hash Method( %1$s)</string>
    <string name="type">Type:</string>
    <string name="unkown">Unknown</string>
    <string name="version">Version:</string>
    <string name="menu_sdcard">SDCard (%1$d)</string>
    <string name="menu_usb">USB Storage (%1$d)</string>
    <string name="title_activity_theme_chooser">Theme</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="action_qrcode">QRCode</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="uninstall">Uninstall</string>
    <string name="menu_packages">Applications</string>
    <string name="action_send">Send</string>
    <string name="action_backup">Backup</string>
    <string name="system">System</string>
    <string name="system_update">System Updated</string>
    <string name="downloaded">Downloaded</string>
    <string name="apk_dia_type">Type:</string>
    <string name="backup_result_tip">success: %1$d ,failed: %2$d</string>
</resources>
