<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015. Qiao
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="110"
        android:title="@string/action_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zip"
        android:icon="@drawable/ic_compress_dark"
        android:orderInCategory="120"
        android:title="@string/action_compress"
        app:showAsAction="ifRoom" />
    <!--    <item
            android:id="@+id/action_copy"
            android:icon="@drawable/ic_action_copy"
            android:orderInCategory="130"
            android:title="@string/action_copy"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_cut"
            android:icon="@drawable/ic_action_cut"
            android:orderInCategory="140"
            android:title="@string/action_cut"
            app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="160"
        android:title="@string/action_select_all"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_qrcode"
        android:orderInCategory="170"
        android:title="@string/action_qrcode"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_detail"
        android:orderInCategory="170"
        android:title="@string/action_detail"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_add_bookmark"
        android:icon="@drawable/ic_action_new_label"
        android:orderInCategory="180"
        android:title="@string/action_bookmark"
        app:showAsAction="never|withText" />
</menu>